Migrated to java 17 and updated dependencies